--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
 	"manifest_version": 2,
 	"version": "1.0.0",
 	"short_name": "React App",
-	"name": "CP Helper",
-	"description": "This extension will help coder with ",
+	"name": "Kontest Reminder",
+	"description": "This extension will help coder with upcoming coding contests.",
 	"browser_action": {
 		"default_icon": "/Assets/card.png",
 		"default_title": "Click here to see your Coding Schedule.",
