--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"version": "1.0.0",
 	"short_name": "React App",
-	"name": "Kontest Schedular",
+	"name": "Kontest Reminder",
 	"description": "This extension will help you never forget about any coding contest",
 	"browser_action": {
 		"default_icon": "/Assets/card.png",
