--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.3.0",
+		"web-ext": "^6.6.0",
 		"web-vitals": "^1.1.2",
 		"webext-options-sync": "^2.0.1",
 		"webextension-polyfill": "^0.8.0"
