--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.8.2",
+		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.11.4",
+		"@mui/material": "^5.5.0",
+		"@mui/styled-engine-sc": "^5.4.2",
 		"@testing-library/jest-dom": "^5.12.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.1",
-		"bootstrap": "^5.0.1",
+		"bootstrap": "^5.1.3",
 		"localforage": "^1.9.0",
 		"node-forge": "^0.10.0",
 		"react": "^17.0.2",
+		"react-bootstrap": "^2.2.1",
 		"react-browser-extension-scripts": "4.0.10",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
-		"styled-components": "^5.3.0",
+		"styled-components": "^5.3.3",
 		"web-ext": "^6.6.0",
 		"web-vitals": "^1.1.2",
 		"webext-options-sync": "^2.0.1",
