--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cp-scheduler",
-	"version": "0.1.0",
+	"version": "2.0.0",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.8.2",
@@ -8,6 +8,7 @@
 		"@material-ui/core": "^4.11.4",
 		"@mui/material": "^5.5.0",
 		"@mui/styled-engine-sc": "^5.4.2",
+		"@mui/styles": "^5.5.1",
 		"@testing-library/jest-dom": "^5.12.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
