--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.21.1",
 		"bootstrap": "^5.1.3",
 		"localforage": "^1.9.0",
+		"luxon": "^3.3.0",
 		"node-forge": "^0.10.0",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.2.1",
