--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "cp-scheduler",
-	"version": "2.0.1",
+	"version": "2.1.3",
 	"private": true,
 	"dependencies": {
-		"14": "^3.1.6",
+		"14": "^1.0.1",
 		"@emotion/react": "^11.8.2",
 		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.11.4",
@@ -13,19 +13,20 @@
 		"@testing-library/jest-dom": "^5.12.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
-		"axios": "^0.21.1",
+		"@types/react-router-dom": "^5.3.3",
+		"axios": "^1.6.7",
 		"bootstrap": "^5.1.3",
 		"localforage": "^1.9.0",
 		"luxon": "^3.3.0",
-		"node-forge": "^0.10.0",
+		"node-forge": "^1.3.1",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.2.1",
-		"react-browser-extension-scripts": "4.0.10",
+		"react-browser-extension-scripts": "^3.3.1",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.3.3",
-		"web-ext": "^7.6.2",
+		"web-ext": "^0.0.1",
 		"web-vitals": "^1.1.2",
 		"webext-options-sync": "^2.0.1",
 		"webextension-polyfill": "^0.8.0"
@@ -43,7 +44,11 @@
 		],
 		"env": {
 			"browser": true,
-			"webextensions": true
+			"webextensions": true,
+			"es6": true
+		},
+		"globals": {
+			"chrome": true
 		}
 	},
 	"browserslist": [
@@ -52,6 +57,7 @@
 	],
 	"devDependencies": {
 		"@iconify-icons/simple-icons": "^1.1.27",
-		"@iconify/react": "^1.1.4"
+		"@iconify/react": "^1.1.4",
+		"@types/chrome": "^0.0.260"
 	}
 }
