--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,25 +3,30 @@
 	"version": "2.1.3",
 	"description": "This extension will never let you forget about any coding contest",
 	"homepage_url": "https://nisarg0.github.io/Kontest-Reminder/",
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"minimum_chrome_version": "74",
 	"icons": {
 		"48": "Assets/card.png"
 	},
 	"permissions": [
-		"alarms",
-		"https://leetcode.com/graphql",
-		"https://practiceapi.geeksforgeeks.org/api/vr/events/?page_number=1&sub_type=all&type=contest",
-		"https://practiceapi.geeksforgeeks.org/api/v1/problems-of-day/problem/today/"
+		"alarms"
 	],
 	"options_ui": {
 		"browser_style": true,
 		"page": "options.html"
 	},
 	"background": {
-		"scripts": ["browser-polyfill.js", "background.bundle.js"]
+		"service_worker": "background.bundle.js"
 	},
-	"browser_action": {
+	"content_scripts": [
+		{
+		 "matches": ["http://*/*","https://*/*","<all_urls>"],
+		  "js": ["browser-polyfill.js"],
+		  "all_frames": true
+		}
+	  ],
+
+	"action": {
 		"default_icon": "Assets/card.png",
 		"default_title": "Click here to see your Coding Schedule.",
 		"default_popup": "popup.html"
@@ -29,5 +34,8 @@
 	"author": {
 		"name": "Nisarg Gogate",
 		"url": "https://github.com/nisarg0"
-	}
+	},
+	"host_permissions": [
+		"*://*/*"
+	]
 }
