--- a/public/firefox-manifest.json
+++ b/public/firefox-manifest.json
@@ -1,12 +1,12 @@
 {
-	"name": "Kontest Reminder",
+	"name": "Contest Notifier",
 	"version": "1.0.9",
-	"description": "This extension will never let you forget about any coding contest",
-	"homepage_url": "https://nisarg0.github.io/Kontest-Reminder/",
+	"description": "No more of 'aaj contest tha!?'. Never miss a contest: Your personal programming scheduler.",
+	"homepage_url": "https://github.com/rajnish0808",
 	"manifest_version": 2,
 	"applications": {
 		"gecko": {
-			"id": "kontest_reminder@nisarg_0",
+			"id": "contest_notifier@rajnish0808",
 			"strict_min_version": "67.0"
 		}
 	},
@@ -27,7 +27,7 @@
 		"default_popup": "popup.html"
 	},
 	"developer": {
-		"name": "Nisarg Gogate",
-		"url": "https://github.com/nisarg0"
+		"name": "Rajnish Kumar",
+		"url": "https://github.com/rajnish0808"
 	}
 }
