--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,14 @@
 {
-	"name": "Kontest Reminder",
-	"version": "2.1.3",
-	"description": "This extension will never let you forget about any coding contest",
-	"homepage_url": "https://nisarg0.github.io/Kontest-Reminder/",
+	"name": "Contest Notifier",
+	"version": "1.1.0",
+	"description": "No more of 'aaj contest tha!?'. Never miss a contest: Your personal programming scheduler.",
+	"homepage_url": "https://github.com/rajnish0808",
 	"manifest_version": 3,
 	"minimum_chrome_version": "74",
 	"icons": {
 		"48": "Assets/card.png"
 	},
-	"permissions": [
-		"alarms"
-	],
+	"permissions": ["alarms"],
 	"options_ui": {
 		"browser_style": true,
 		"page": "options.html"
@@ -20,11 +18,11 @@
 	},
 	"content_scripts": [
 		{
-		 "matches": ["http://*/*","https://*/*","<all_urls>"],
-		  "js": ["browser-polyfill.js"],
-		  "all_frames": true
+			"matches": ["http://*/*", "https://*/*", "<all_urls>"],
+			"js": ["browser-polyfill.js"],
+			"all_frames": true
 		}
-	  ],
+	],
 
 	"action": {
 		"default_icon": "Assets/card.png",
@@ -32,8 +30,8 @@
 		"default_popup": "popup.html"
 	},
 	"author": {
-		"name": "Nisarg Gogate",
-		"url": "https://github.com/nisarg0"
+		"name": "Rajnish Kumar",
+		"url": "https://github.com/rajnish0808"
 	},
 	"host_permissions": [
 		"https://leetcode.com/graphql",
