--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,22 @@
+# This is the root of the EditorConfig configuration
 root = true
 
+# General settings for all files
 [*]
+# Use tabs for indentation
 indent_style = tab
+# Use LF for end of line characters
 end_of_line = lf
+# Files should be encoded in UTF-8
 charset = utf-8
+# Remove any trailing whitespace from the end of lines
 trim_trailing_whitespace = true
+# Ensure that each file ends with a newline character
 insert_final_newline = true
 
+# Settings specific to YAML files
 [*.yml]
+# Use spaces for indentation in YAML files
 indent_style = space
+# Indent by 2 spaces in YAML files
 indent_size = 2
